--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,22 @@
+astroid==1.5.3
 click==6.7
+colorama==0.3.9
 coverage==4.4.1
 Flask==0.12.2
+Flask-Moment==0.5.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
 Flask-WTF==0.14.2
+isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.9.6
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
 psycopg2==2.7.1
+pylint==1.7.2
+six==1.10.0
 SQLAlchemy==1.1.11
 Werkzeug==0.12.2
+wrapt==1.10.10
 WTForms==2.1
